Projeto escola UPDATE 2
Agora o PHP funciona e o CSS do cadastro de produto tá pronto

--- a/Back-End/Projeto loja/styles/style.css
+++ b/Back-End/Projeto loja/styles/style.css
@@ -35,6 +35,11 @@ body {
     border-color: white;
 }
 
+input {
+    border-radius: 7px;
+    border-color: white;
+}
+
 .buttons {
     display: flex;
     justify-content: space-evenly;
