--- a/Back-End/Projeto loja/styles/style.css
+++ b/Back-End/Projeto loja/styles/style.css
@@ -114,10 +114,12 @@ input {
 .menu a {
     text-decoration: none;
     color: white;
+    background-color: rgb(0, 119, 255);
+    border-radius: 5px;
 }
 
 .menu a:hover {
-    color: black;
+    color: rgb(0, 0, 0);
     transition: 0.3s;
     text-decoration:underline;
 }
@@ -133,8 +135,13 @@ input {
 
 /* --------------------------------------------------Home--------------------------------------------------------- */
 
+html {
+    height: 100%;
+}
+
 #bodyHome {
     margin: 0;
+    height: 100%;
 }
 
 .page {
@@ -146,9 +153,19 @@ input {
     display: flex;
     align-items: center;
     background-color: rgb(0, 40, 240);
-    color: rgb(255, 255, 255);
+    font-weight: bold;
+    animation: changeColor 0.5s infinite alternate;
     height: 30px;
 }
+
+  @keyframes changeColor {
+    0%   { color: rgb(108, 2, 170); }
+    10%  { color: red; }
+    25%  { color: orange; }
+    50%  { color: yellow; }
+    75%  { color: rgb(0, 255, 0); }
+    100% { color: rgb(0, 238, 255); }
+  }
 
 #line h5 {
     margin: 0;
@@ -161,7 +178,7 @@ input {
     justify-content: space-between;
     align-items: center;
     background-color: rgb(0, 75, 240);
-    height: 100%;
+    height: 140px;
     width: 100%;
     font-family: "Ahkio";
 }
@@ -215,16 +232,17 @@ margin: 2%;
 }
 
 .img {
-    height: 75px;
-    width: 75;
+    height: 100px;
+    width: 100px;
 }
 
 #filter {
-    height: 496px;
+    height: 100%;
     width: 300px;
     display: flex;
     background-color: rgb(192, 192, 192);
     flex-direction: column;
+    position: fixed;
 }
 
 #filter h1 {
@@ -234,6 +252,8 @@ margin: 2%;
 #filters {
     display: flex;
     justify-content: center;
+    font-family: "Ahkio-Thin";
+    font-size: 30px;
 }
 
 #filters select {
