--- a/Back-End/Projeto loja/styles/style.css
+++ b/Back-End/Projeto loja/styles/style.css
@@ -252,7 +252,6 @@ left: 10px;
     font-size: 20px;
     background-color: rgb(255, 255, 255);
     flex-direction: column;
-    /* position: fixed; */
     padding: 10px;
     border-right: 2px solid rgb(185, 185, 185);
     box-shadow: 3px 3px 10px rgb(173, 173, 173);
@@ -292,6 +291,8 @@ left: 10px;
 
 .search input {
     background-color: rgb(223, 223, 223);
+    font-family: "Verdana";
+    border-radius: 10px;
 }
 
 #display {
@@ -306,6 +307,28 @@ left: 10px;
     flex: 1;
     height: 100%;
     width: 100%;
+    flex-wrap: wrap;
+    overflow: auto;
+}
+
+.items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(223, 223, 223);
+    border-radius: 10px;
+    width: 275px;
+    margin: 20px;
+}
+
+.products-images {
+    height: 250px;
+    width: 250px;
+    margin-top: 10px;
+}
+
+.products-rows {
+    flex-direction: row;
 }
 
 @font-face {
