--- a/Back-End/Projeto loja/styles/style.css
+++ b/Back-End/Projeto loja/styles/style.css
@@ -186,7 +186,7 @@ html {
     box-shadow: 3px 3px 10px rgb(0, 40, 200);
 }
 
-#box {
+.box {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -196,19 +196,23 @@ html {
     position: absolute;
 }
 
-#title2 {
+.title2 {
     font-size: 28px;
     position: absolute;
     left: 175px;
 }
 
-#title2 h1 {
+.title2 h1 {
     margin: 0px;
     width: 262px;
     color: white;
 }
 
-#login {
+.cart {
+    display: flex;
+}
+
+.login {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -218,17 +222,17 @@ html {
     position: absolute;
 }
 
-#login h1 {
+.login h1 {
     margin: 0px;
 }
 
-#login a {
+.login a {
     text-decoration: none;
     color: white;
     margin: 10px;
 }
 
-#login a:hover {
+.login a:hover {
     transition: 0.3s;
     color: black;   
 }
@@ -342,6 +346,56 @@ left: 10px;
     flex-wrap: wrap;
     height: auto;
 }
+
+.button-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.button-info button {
+    background-color: rgb(255, 80, 1);
+    border-color: rgb(255, 80, 1);
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+.cart_div {
+	float:right;
+	font-weight:bold;
+	position:relative;
+	}
+.cart_div a {
+	color:#000;
+	}
+.cart_div span {
+	font-size: 12px;
+	line-height: 14px;
+	background: #F68B1E;
+	padding: 2px;
+	border: 2px solid #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: -1px;
+	left: 13px;
+	color: #fff;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	}
+
+
+.cart .remove {
+	background: none;
+	border: none;
+	color: #0067ab;
+	cursor: pointer;
+	padding: 0px;
+	}
+.cart .remove:hover {
+	text-decoration:underline;
+	}
 
 @font-face {
     font-family: "Ahkio";
