--- a/Back-End/Projeto livraria/styles/style.css
+++ b/Back-End/Projeto livraria/styles/style.css
@@ -15,9 +15,9 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-color: rgb(140, 60, 0);
+    background-color: rgb(40, 110, 240);
     border-radius: 20px;
-    color: rgb(0, 0, 0);
+    color: white;
     font-family: "Evo";
 }
 
@@ -33,7 +33,7 @@
     align-items: center;
     display: flex;
     border-radius: 7px;
-    background-color: rgb(180, 60, 0);
+    background-color: rgb(0, 75, 240);
     padding: 15px;
     margin-bottom: 30px;
 }
@@ -84,6 +84,323 @@ input {
 @font-face {
     font-family: "Evo";
     src: url(Evogria.otf);
+}
+
+/* --------------------------------------------------------------------------------------------------------------- */
+
+/* --------------------------------------------------Login-------------------------------------------------------- */
+
+.btl {
+    background-color: rgb(0, 255, 0);
+    border-color: rgb(0, 255, 0);
+    font-family: "Evo";    
+}
+
+/* --------------------------------------------------------------------------------------------------------------- */
+
+/* --------------------------------------------------Menu-------------------------------------------------------- */
+
+.menu {
+    background-color: rgb(0, 75, 240);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    border-radius: 7px;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    background-color: rgb(0, 119, 255);
+    border-radius: 5px;
+}
+
+.menu a:hover {
+    color: rgb(0, 0, 0);
+    transition: 0.3s;
+    text-decoration:underline;
+}
+
+.disclaimer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0);
+}
+
+/* --------------------------------------------------------------------------------------------------------------- */
+
+/* --------------------------------------------------Home--------------------------------------------------------- */
+
+html {
+    height: 100%;
+}
+
+#bodyHome {
+    margin: 0;
+    height: 100%;
+}
+
+.page {
+    height:100%;
+    width: 100%;
+}
+
+#line {
+    display: flex;
+    align-items: center;
+    background-color: #252525;
+    font-weight: bold;
+    animation: changeColor 0.5s infinite alternate;
+    height: 30px;
+
+}
+
+  @keyframes changeColor {
+    0%   { color: rgb(108, 2, 170); }
+    20%  { color: red; }
+    40%  { color: orange; }
+    60%  { color: yellow; }
+    80%  { color: rgb(0, 255, 0); }
+    100% { color: rgb(0, 238, 255); }
+  }
+
+#line h5 {
+    margin: 0;
+    margin-left: 0.5%;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #111111;
+    height: 140px;
+    width: 100%;
+    box-shadow: 3px 3px 10px #000000;
+}
+
+.box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 550px;
+    justify-content: space-between;
+    margin: 20px;
+    position: relative;
+}
+
+.cart {
+    display: flex;
+}
+
+.login {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: #ff6b00;
+    border-radius: 20px;
+    right: 15px;
+    position: absolute;
+}
+
+.login h1 {
+    margin: 0px;
+}
+
+.login a {
+    text-decoration: none;
+    color: white;
+    margin: 10px;
+}
+
+.login a:hover {
+    transition: 0.3s;
+    color: black;   
+}
+
+.image {
+justify-content: center;
+position: relative;
+left: 10px;
+}
+
+.img {
+    height: 120px;
+    width: 240px;
+}
+
+#filter {
+    min-height: 454;
+    width: 300px;
+    display: flex;
+    font-family: "Verdana";
+    font-size: 20px;
+    background-color: #000000;
+    flex-direction: column;
+    padding: 10px;
+    border-right: 2px solid #000000;
+    box-shadow: 3px 3px 10px #000000;
+}
+
+#filter select {
+    font-size: 20px;
+    border-color: #111111;
+    background-color: #111111;
+    color: #ff6b00;
+    width: 200px;
+    font-family: "Verdana";
+}
+
+#filter h1 {
+    margin: 0px
+}
+
+#filters select {
+    border-radius: 20px;
+    border-color: white;
+    font-size: 22px;
+    font-family: "Ahkio-Thin";
+}
+
+.filter-options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+
+.search {
+    display: flex;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.search input {
+    background-color: #ff6b00;
+    border-color: #ff6b00;
+    color: rgb(0, 0, 0);
+    font-family: "Verdana";
+    border-radius: 10px;
+}
+
+.category {
+    color: #ff6b00;
+}
+
+#display {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+}
+
+#products {
+    background-color: #252525;
+    flex: 1;
+    height: auto;
+    width: auto;
+    flex-wrap: wrap;
+    overflow: auto;
+}
+
+.items form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+    width: 275px;
+    margin: 20px;
+}
+
+.items p {
+    padding-left: 5%;
+}
+
+.products-images {
+    height: 250px;
+    width: 250px;
+    margin-top: 10px;
+}
+
+.products-rows {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+}
+
+.button-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.button-info button {
+    background-color: rgb(0, 229, 255, 1);
+    border-color: rgb(0, 229, 255, 1);
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+.cart_div {
+	float:right;
+    right: 50px;
+	font-weight:bold;
+	position:relative;
+	}
+
+.cart_div a {
+    display: flex;
+    flex-direction: column;
+	color:#ffffff;
+    text-decoration: none;
+	}
+
+.cart_div span {
+	font-size: 12px;
+	line-height: 14px;
+	background: rgb(0, 229, 255, 1);
+	padding: 2px;
+	border: 2px solid #000000;
+	border-radius: 50%;
+	position: absolute;
+	top: -1px;
+	left: 20px;
+	color: #000000;
+	width: 15px;
+	height: 15px;
+	text-align: center;
+	}
+
+.cart .remove {
+	background: none;
+	border: none;
+	color: #0067ab;
+	cursor: pointer;
+	padding: 0px;
+	}
+
+.cart .remove:hover {
+	text-decoration:underline;
+	}
+
+@font-face {
+    font-family: "Floriane";
+    src: url(Florilane.ttf);
+}
+
+@font-face {
+    font-family: "Ahkio-Thin";
+    src: url(Ahkio-Thin.ttf);
 }
 
 /* --------------------------------------------------------------------------------------------------------------- */
