--- a/Back-End/Projeto livraria/styles/style.css
+++ b/Back-End/Projeto livraria/styles/style.css
@@ -139,7 +139,7 @@ html {
     height: 100%;
 }
 
-#bodyHome {
+.bodyHome {
     margin: 0;
     height: 100%;
 }
@@ -149,7 +149,7 @@ html {
     width: 100%;
 }
 
-#line {
+.line {
     display: flex;
     align-items: center;
     background-color: #252525;
@@ -168,7 +168,7 @@ html {
     100% { color: rgb(0, 238, 255); }
   }
 
-#line h5 {
+.line h5 {
     margin: 0;
     margin-left: 0.5%;
 }
@@ -182,16 +182,6 @@ html {
     height: 140px;
     width: 100%;
     box-shadow: 3px 3px 10px #000000;
-}
-
-.box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 550px;
-    justify-content: space-between;
-    margin: 20px;
-    position: relative;
 }
 
 .cart {
@@ -225,9 +215,9 @@ html {
 }
 
 .image {
-justify-content: center;
-position: relative;
-left: 10px;
+    justify-content: center;
+    position: relative;
+    left: 17px;
 }
 
 .img {
@@ -314,11 +304,68 @@ left: 10px;
     border-radius: 10px;
 }
 
+.banner {
+    position: relative;
+    max-width: 1200px;
+    width: 100%;
+    height: 300px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.slide {
+    display: none;
+    position: relative;
+    height: 300px;
+}
+
+.slide img {
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    object-fit: contain;      
+    transition: opacity 1s ease-in-out;
+}
+
+.previous, .next {
+    cursor: pointer;
+  position: absolute;
+  top: 50%;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 24px;
+  transition: 0.3s;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .previous:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  .fade {
+    animation: fade 1s ease-in-out;
+  }
+  
+  @keyframes fade {
+    from { opacity: 0.4 }
+    to { opacity: 1 }
+  }
+
 .category {
     color: #ff6b00;
 }
 
-#display {
+.display {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -326,7 +373,7 @@ left: 10px;
 }
 
 .books {
-    background-color: #252525;
+    background-color: #111111;
     flex: 1;
     height: auto;
     width: auto;
@@ -338,21 +385,19 @@ left: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: #000000;
+    color: #ff6b00;
+    border: 1px solid #ff6b00;
     border-radius: 10px;
     width: 275px;
     margin: 20px;
 }
 
-.items p {
-    padding-left: 5%;
-}
-
 .products-images {
-    height: 250px;
-    width: 250px;
-    margin-top: 10px;
+    image-rendering: optimizeQuality;
+    height: 275px;
+    width: 225px;
+    margin-top: 20px;
 }
 
 .products-rows {
@@ -360,6 +405,10 @@ left: 10px;
     flex-direction: row;
     flex-wrap: wrap;
     height: auto;
+}
+
+.product-info {
+    width: 200px;
 }
 
 .button-info {
@@ -370,41 +419,42 @@ left: 10px;
 }
 
 .button-info button {
-    background-color: rgb(0, 229, 255, 1);
-    border-color: rgb(0, 229, 255, 1);
-    color: rgb(0, 0, 0);
+    background-color: #000000;
+    border-color: #ff6b00;
+    color: #ff6b00;
     border-radius: 10px;
 }
 
 .cart_div {
-	float:right;
-    right: 50px;
 	font-weight:bold;
 	position:relative;
-	}
+}
 
 .cart_div a {
     display: flex;
     flex-direction: column;
-	color:#ffffff;
+    justify-content: center;
+    align-items: center;
+	color:#ff6b00;
     text-decoration: none;
-	}
+    margin-left: 25px;
+}
 
 .cart_div span {
 	font-size: 12px;
 	line-height: 14px;
-	background: rgb(0, 229, 255, 1);
+	background: #111111;
 	padding: 2px;
-	border: 2px solid #000000;
+	border: 2px solid #ff6b00;
 	border-radius: 50%;
 	position: absolute;
 	top: -1px;
-	left: 20px;
-	color: #000000;
+	left: 30px;
+	color: #ff6b00;
 	width: 15px;
 	height: 15px;
 	text-align: center;
-	}
+}
 
 .cart .remove {
 	background: none;
@@ -412,11 +462,11 @@ left: 10px;
 	color: #0067ab;
 	cursor: pointer;
 	padding: 0px;
-	}
+}
 
 .cart .remove:hover {
 	text-decoration:underline;
-	}
+}
 
 @font-face {
     font-family: "Floriane";
