--- a/Back-End/Projeto livraria/styles/style.css
+++ b/Back-End/Projeto livraria/styles/style.css
@@ -74,37 +74,35 @@
     color: #ff6b00;
 }
 
+input[type="file"]::file-selector-button {
+    background-color: #ff6b00;
+    color: #000000;
+    border: 2px solid #000000;
+    padding: 2px;
+}
+
+input[type="file"]::file-selector-button:hover {
+    background-color: #ffab00;
+    color: #000000;
+    border: 2px solid #000000;
+    padding: 2px;
+}
+
 .buttons {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .buttons input {
     border-radius: 7px;
 }
 
-.bt1 {
-    background-color: rgb(0, 255, 0);
-    border-color: rgb(0, 255, 0);
+.bt {
+    background-color: #000000;
+    border-color: #ff6b00;
+    color: #ff6b00;
     font-family: "Evo";
-}
-
-.bt2 {
-    background-color: rgb(255, 255, 0);
-    border-color: rgb(255, 255, 0);
-    font-family: "Evo";
-}
-
-.bt3 {
-    background-color: rgb(255, 0, 0);
-    border-color: rgb(255, 0, 0);
-    font-family: "Evo";
-}
-
-.bt4 {
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(255, 255, 255);
-    font-family: "Evo";
+    margin-inline: 5px;
 }
 
 @font-face {
