--- a/Back-End/Quarta fase/Projeto Back-End Gatitos/style.css
+++ b/Back-End/Quarta fase/Projeto Back-End Gatitos/style.css
@@ -5,14 +5,14 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    color: #333;
+    animation: changeColor 1s infinite alternate;
     background-size: cover;
     background: url("Maxwell.webp") no-repeat center center fixed  ;
 }
 
 .container {
     text-align: center;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 2.5rem;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -22,14 +22,14 @@ body {
 
 h1 {
     margin-top: 0;
-    color: #555;
+    animation: changeColor 1s infinite alternate;
     font-size: 1.8rem;
 }
 
 .image-box {
     width: 100%;
     height: 300px;
-    background-color: #e9ecef;
+    background-color: #000000;
     border-radius: 8px;
     margin: 1.5rem 0;
     display: flex;
@@ -45,19 +45,28 @@ h1 {
     border-radius: 8px;
 }
 
-#get-cat-btn {
+#cat-button {
     padding: 0.8rem 1.5rem;
     font-size: 1rem;
     color: #fff;
-    background-color: #007bff;
+    background-color: #000000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.1s ease;
 }
 
 #get-cat-btn:hover {
     background-color: #0056b3;
+}
+
+@keyframes changeColor {
+    0%   { color: rgb(108, 2, 170); }
+    20%  { color: red; }
+    40%  { color: orange; }
+    60%  { color: yellow; }
+    80%  { color: rgb(0, 255, 0); }
+    100% { color: rgb(0, 238, 255); }
 }
 
 /* Para telas menores */
